--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,14 @@
             background: #000 url("https://i.imgur.com/5tnk3du.jpg") center center;
             width: 100%;
             height: 100%;
-            background-size: cover;
+            background-size: fluid;
             color: #fff;
           }
       </style>
     </head>
   <body>
   <!-- Start Jumbotron -->
-    <div class="container">
+    <div class="container-fluid">
       <div class="jumbotron jumbotron-cover-image">
         <div class="container">
           <h1>Tennessee Arms Company, LLC</h1>
