--- a/templates/inventory_list.html
+++ b/templates/inventory_list.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% block bodyblock %}
 <div class="container-fluid">
-    <h1>Current Inventory</h1>
+    <h1>Available Inventory</h1>
+
     <p> Current shipping times are 2-6 weeks due to shipping backloads from our suppliers and seasonally higher volume of orders. We appreciate your patience.</p>
 <ul>
     {% for inv in object_list %}
@@ -11,7 +12,7 @@
         <div class="col-sm-3 col-md-3 col-lg-6">
             <!--inventory --> 
             <h3>Available Inventory</h3>
-            <p>* Our inventory changes daily and we manufacture our receivers locally </p>
+            <p>* Our inventory changes daily and we manufacture our receivers locally, a negative value reflects a backorder status and that new stock is in production </p>
             <ul>
                 <li>Ar15 Black : {{ inv.ar15black}}</li>
                 <li>Ar15 FDE   : {{ inv.ar15fde }}</li>
@@ -29,7 +30,7 @@
                 <li>Tac9 Black : {{ inv.tac9black}}</li>
                 <li>Tac9 FDE   : {{ inv.tac9fde }}</li>
                 <li>Tac9 Stlh  : {{ inv.tac9stealth}}</li>
-                <li>Tac9 OD : {{ inv.tac9od}}</li>
+                <li>Tac9 OD (Coming Soon) : {{ inv.tac9od}}</li>
                 <li>Tac9 Rifle   : {{ inv.tac9rifle }}</li>
                 <li>80 Black : {{ inv.black80}}</li>
                 <li>80 FDE   : {{ inv.fde80 }}</li>
