--- a/templates/staffindex.html
+++ b/templates/staffindex.html
@@ -7,6 +7,7 @@
 </div> 
 <div class="container-fluid">
    <h5> Tn Arms Co Homepage</h5></br>
+   <p>Database backups available at: https://data.heroku.com/datastores/af9b654a-8b6d-4f20-ac2a-955399893219#durability</p>
    <h6> On File FFL Search: by FFL Number, Premise Address, Company Name</h6>
         <form action="{% url 'ffl:search' %}" method="get">
   <input name="q" type="text" placeholder="Search...">
