added avail Inv 20200720

--- a/templates/staffindex.html
+++ b/templates/staffindex.html
@@ -19,7 +19,7 @@
     <!--StartSection -->
     <div class="col-sm-3 col-md-3 col-lg-3">
         <!--inventory --> 
-        <h3>Available Inventory</h3>
+        <h3>Inventory</h3>
         <ul>
             <li>Ar15 Black : {{ inv.ar15black}}</li>
             <li>Ar15 FDE   : {{ inv.ar15fde }}</li>
