--- a/templates/staffbase.html
+++ b/templates/staffbase.html
@@ -4,6 +4,7 @@
 <html lang="en">
   <head>
     <title>TNA Staff</title>
+    <link rel="shortcut icon" type="image" href="{% static 'flavicon.png' %}"/>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
