--- a/templates/averagesales.html
+++ b/templates/averagesales.html
@@ -13092,7 +13092,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Variable-Assignment">Variable Assignment<a class="anchor-link" href="#Variable-Assignment">&#182;</a></h3>
+<h3 id="Variable-Assignment">Variable Assignment, Updated 20200916<a class="anchor-link" href="#Variable-Assignment">&#182;</a></h3>
 </div>
 </div>
 </div>
