added tac980/ar3080 t models

--- a/templates/availinv_list.html
+++ b/templates/availinv_list.html
@@ -84,6 +84,17 @@
     <!--End Section -->
     <!--StartSection -->
     <div class="col-sm-4">
+        <!-- 80's -->
+            <h3>Avail  TAC980% Receivers</h3>
+            <li>Avail 80 Black : {{ inv.blk980}}</li>
+            <li>Avail 80 FDE   : {{ inv.fde980 }}</li>
+            <li>Avail 80 Stlh  : {{ inv.stl980}}</li>
+            <li>Avail 80 Rifle : {{ inv.rif9880}}</li>
+            
+    </div>
+    <!--End Section -->
+    <!--StartSection -->
+    <div class="col-sm-4">
         <!--Notes -->
         {% if inv.inventory %}
         
