--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -91,6 +91,7 @@
             <li>BlemTAC980 FDE   : {{ inv.blemfde980 }}</li>
             <li>BlemTAC980 Stlh  : {{ inv.blemstl980}}</li>
             <li>BlemTAC980 Rifle : {{ inv.blemrif980}}</li>
+            <li>BlemTAC980 OD : {{ inv.blemod980}}</li>
     </div>
     <!-- End Section-->
     <!--Start Section-->
