--- a/templates/consumables_list.html
+++ b/templates/consumables_list.html
@@ -88,7 +88,7 @@
         <!--Accessories --> 
         <h3>Notes </h3>
         <p>Notes: {{objects.consumablesnotes}}</p>
-        <p><a href="{% url 'updateconsumables' pk=objects.pk %}">Update</a></p>-->
+        <p><a href="{% url 'updateconsumables' pk=objects.pk %}">Update</a></p>
     </div>
     <!--End Section-->
   </div>
