--- a/templates/staffbase.html
+++ b/templates/staffbase.html
@@ -19,7 +19,7 @@
         <div class="nav navbar-nav">
             <a class="nav-item nav-link active" href="{% url 'staff' %}">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="{% url 'stafflist' %}">Inventory</a>
-            <a class="nav-item nav-link" href="{% url 'averagesales' %}">AverageSales</a>
+            <a class="nav-item nav-link" href="https://desolate-eyrie-01805.herokuapp.com/">AverageSales</a>
             <a class="nav-item nav-link" href="{% url 'ffl:fflindex' %}">FFL Database</a>
             <a class="nav-item nav-link" href="{% url 'orderlist' %}">Purchase Orders</a>
             <a class="nav-item nav-link" href="{% url 'consumableslist' %}">Consumables</a>
