--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -103,6 +103,7 @@
             <li>AR3080 Stlh  : {{ inv.stl3080 }}</li>
             <li>AR3080 Rifle : {{ inv.rif3080 }}</li>
             <li>AR3080 OD : {{ inv.od3080}}</li>
+            <li>AR3080 Disposable Jig : {{ inv.jig3080}}</li>
             <li>Blem AR3080 Black : {{ inv.blemblk3080 }}</li>
             <li>Blem AR3080 FDE   : {{ inv.blemfde3080 }}</li>
             <li>Blem AR3080 Stlh  : {{ inv.blemstl3080 }}</li>
