--- a/templates/availinv_list.html
+++ b/templates/availinv_list.html
@@ -74,11 +74,13 @@
             <li>Avail 80 FDE   : {{ inv.fde80 }}</li>
             <li>Avail 80 Stlh  : {{ inv.stealth80}}</li>
             <li>Avail 80 Rifle : {{ inv.rifle80}}</li>
+            <li>Avail 80 OD : {{ inv.od80}}</li>
             <li>Avail Jigs : {{ inv.jig80 }}</li>
             <li>Avail Blem 80 Black : {{ inv.blemblack80}}</li>
             <li>Avail Blem 80 FDE   : {{ inv.blemfde80 }}</li>
             <li>Avail Blem 80 Stlh  : {{ inv.blemstealth80}}</li>
             <li>Avail Blem 80 Rifle : {{ inv.blemrifle80}}</li>
+            <li>Avail Blem 80 OD : {{ inv.blemod80}}</li>
 
     </div>
     <!--End Section -->
