--- a/templates/inventory_list.html
+++ b/templates/inventory_list.html
@@ -35,7 +35,8 @@
                 <li>80 Black : {{ inv.black80}}</li>
                 <li>80 FDE   : {{ inv.fde80 }}</li>
                 <li>80 Stlh  : {{ inv.stealth80}}</li>
-                <li>80 Rifle : {{ inv.rifle80}}</li>           
+                <li>80 Rifle : {{ inv.rifle80}}</li>
+                <li>80 OD : {{ inv.od80}}</li>           
             </ul>
        </div>
     {% endfor %}
